// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<MapContainer
  center={
    Object {
      "lat": 0,
      "lng": 0,
    }
  }
  maxBounds={
    Array [
      Array [
        300,
        -300,
      ],
      Array [
        -300,
        300,
      ],
    ]
  }
  maxZoom={4}
  minZoom={1}
  whenCreated={[Function]}
  zoom={1}
>
  <ForwardRef(LeafComponent)
    attribution="<a href='https://www.tokyodisneyresort.jp/tds/map.html' target='_blank'>【公式】マップ | 東京ディズニーシー</a>"
    noWrap={true}
    url="/tds-map-tiles/{z}/{x}/{y}.png"
  />
  <MapMarker
    dragable={false}
    key="000"
    popup={
      <ForwardRef(Typography)>
        title
      </ForwardRef(Typography)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
</MapContainer>
`;

exports[`Shallow Snapshot Tests when currentPosition state is setted 1`] = `
<MapContainer
  center={
    Object {
      "lat": 0,
      "lng": 0,
    }
  }
  maxBounds={
    Array [
      Array [
        300,
        -300,
      ],
      Array [
        -300,
        300,
      ],
    ]
  }
  maxZoom={4}
  minZoom={1}
  whenCreated={[Function]}
  zoom={1}
>
  <ForwardRef(LeafComponent)
    attribution="<a href='https://www.tokyodisneyresort.jp/tds/map.html' target='_blank'>【公式】マップ | 東京ディズニーシー</a>"
    noWrap={true}
    url="/tds-map-tiles/{z}/{x}/{y}.png"
  />
  <MapMarker
    dragable={false}
    key="000"
    popup={
      <ForwardRef(Typography)>
        title
      </ForwardRef(Typography)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
  <MapMarker
    dragable={true}
    onDragEnd={[Function]}
    onDragStart={[Function]}
    permanentTooltip={
      <ForwardRef(Box)
        sx={
          Object {
            "p": 1,
          }
        }
      >
        <ForwardRef(Typography)
          align="center"
          component="p"
          sx={
            Object {
              "fontWeight": "bold",
            }
          }
          variant="h6"
        >
          この位置でよろしいですか？
        </ForwardRef(Typography)>
        <ForwardRef(Typography)
          component="p"
          variant="subtitle2"
        >
          ※このマーカーは掴んで移動することができます。
        </ForwardRef(Typography)>
        <ForwardRef(Typography)
          component="p"
          variant="subtitle2"
        >
          ※あとで変更することができます。
        </ForwardRef(Typography)>
        <ForwardRef(Grid)
          container={true}
          justifyContent="center"
          spacing={2}
          sx={
            Object {
              "textAlign": "center",
            }
          }
        >
          <ForwardRef(Grid)
            item={true}
            xs={6}
          >
            <ForwardRef(Button)
              onClick={[Function]}
            >
              キャンセル
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
          <ForwardRef(Grid)
            item={true}
            xs={6}
          >
            <ForwardRef(Button)
              onClick={[Function]}
            >
              確定
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 1,
        "lng": 1,
      }
    }
    variant="red"
  />
</MapContainer>
`;

exports[`Shallow Snapshot Tests with onClickPostTitle props 1`] = `
<MapContainer
  center={
    Object {
      "lat": 0,
      "lng": 0,
    }
  }
  maxBounds={
    Array [
      Array [
        300,
        -300,
      ],
      Array [
        -300,
        300,
      ],
    ]
  }
  maxZoom={4}
  minZoom={1}
  whenCreated={[Function]}
  zoom={1}
>
  <ForwardRef(LeafComponent)
    attribution="<a href='https://www.tokyodisneyresort.jp/tds/map.html' target='_blank'>【公式】マップ | 東京ディズニーシー</a>"
    noWrap={true}
    url="/tds-map-tiles/{z}/{x}/{y}.png"
  />
  <MapMarker
    dragable={false}
    key="000"
    popup={
      <ForwardRef(Button)
        variant="text"
      >
        title
      </ForwardRef(Button)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="blue"
  />
</MapContainer>
`;
